<resources>
    <string name="app_name">Projeto Not + Hungry</string>
    <string name="nome_produto">Produto</string>
    <string name="valor_produto">Valor do produto :</string>
    <string name="descrição_produto">Descrição</string>
    <string name="categoria_produto">Categoria</string>
    <string name="quantidade_produto">Quantidade disponivel :</string>
    <string name="inserir_imagem">Inserir imagem</string>
    <string name="valor">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="esqueceu_a_senha">Esqueceu a senha ?</string>
    <string name="carteira">Carteira</string>
    <string name="inicio">Inicio</string>
    <string name="produtos">Produtos</string>
    <string name="perfil">Perfil</string>
    <string name="registrar">Registrar</string>
    <string name="endere_o">Endereço</string>
    <string name="atualizar">Atualizar</string>
    <string name="n">Nº</string>
    <string name="endere_o_cadastro">Endereço</string>
    <string name="_1500">1500</string>
    <string name="al_rio_negro">Al. Rio Negro</string>
    <string name="saldo_disponivel">Saldo Disponivel :</string>
    <string name="pts">PTS</string>
    <string name="todo_perfil">TODO</string>
    <string name="xxxx">XXXX</string>
    <string name="alphavile">Alphavile</string>
    <string name="nome">Nome</string>
    <string name="_06454_040">06454-040</string>
    <string name="email">Email</string>
    <string name="bairro">Bairro</string>
    <string name="lizaamelhor123">LizaAMelhor123</string>
    <string name="cidade">Cidade</string>
    <string name="cep">CEP</string>
    <string name="senha">Senha</string>
    <string name="henrique_felipe">Henrique Felipe</string>
    <string name="henriquepf_melhor_generation_org">henriquePF.melhor@generation.org</string>
    <string name="barueri">Barueri</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="link_da_imagem">Link da imagem:</string>
</resources>